@@ -26,6 +26,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.9:<br/>
+        [BEAM-1196] Latitude shift for non-WGS84 datums<br/>
         [BEAM-1174] DIMAP stores the band grouping only if a product has a description<br/>        
         <p>Changes in 4.8:<br/>
         [BEAM-1168] Add Sinusoidal and Mollweide map projection<br/>
