@@ -42,6 +42,7 @@ Improvements
 [BEAM-1183] - Improve reprojection UI usability 
 
 Bugs
+[BEAM-1196] - Latitude shift for non-WGS84 datums
 [BEAM-1194] - Open RGB in image view leads to "Unknown band:" error
 [BEAM-1192] - Title in histogram does not adjust to current band
 [BEAM-1187] - Libraries of SLF4J are included in lib directory
